upgrade to svelte 4

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -96,8 +96,8 @@ CACHE_RECONNECT_TIMEOUT_UPPER=5000
 # user: rauthy
 # schema: rauthy with owner rauthy
 #
-DATABASE_URL=sqlite::memory:
-#DATABASE_URL=sqlite:data/rauthy.db
+#DATABASE_URL=sqlite::memory:
+DATABASE_URL=sqlite:data/rauthy.db
 #DATABASE_URL=postgresql://postgres:123SuperSafe@localhost:5432/rauthy
 
 # Max DB connections - irrelevant for SQLite (default: 5)
@@ -128,8 +128,8 @@ DATABASE_URL=sqlite::memory:
 # Format: "key_id/enc_key another_key_id/another_enc_key" - the enc_key itself must be exactly 32 characters long and
 # and should not contain special characters.
 # The ID must match '[a-zA-Z0-9]{2,20}'
-#ENC_KEYS="bVCyTsGaggVy5yqQ/S9n7oCen53xSJLzcsmfdnBDvNrqQ63r4 q6u26onRvXVG4427/3CEC8RJWBcMkrBMkRXgx65AmJsNTghSA"
-#ENC_KEY_ACTIVE=bVCyTsGaggVy5yqQ
+ENC_KEYS="bVCyTsGaggVy5yqQ/S9n7oCen53xSJLzcsmfdnBDvNrqQ63r4 q6u26onRvXVG4427/3CEC8RJWBcMkrBMkRXgx65AmJsNTghSA"
+ENC_KEY_ACTIVE=bVCyTsGaggVy5yqQ
 
 # M_COST should never be below 32768 in production
 ARGON2_M_COST=32768
