--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,20 +16,20 @@
 		"@playwright/test": "^1.25.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.1",
-		"@sveltejs/kit": "^1.14.0",
+		"@sveltejs/kit": "^1.20.4",
 		"argon2-browser": "^1.18.0",
 		"base64-arraybuffer": "^1.0.2",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.32.2",
 		"jwt-decode": "^3.1.2",
 		"oauth-pkce": "^0.0.6",
 		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
+		"prettier-plugin-svelte": "^2.10.1",
 		"sjcl": "^1.0.8",
-		"svelte": "^3.44.0",
-		"svelte-check": "^3.1.4",
-		"typescript": "^5.0.2",
+		"svelte": "^4.0.0",
+		"svelte-check": "^3.4.3",
+		"typescript": "^5.0.0",
 		"vite": "^4.0.0",
 		"yup": "^1.0.2"
 	},
