precompressed static UI files + caching

--- a/rauthy-handlers/Cargo.toml
+++ b/rauthy-handlers/Cargo.toml
@@ -14,12 +14,14 @@ actix-web-validator = "5"
 actix-web-grants = "3"
 futures = "0.3"
 lazy_static = "1"
+mime_guess = "2"
 num_cpus = "1"
 rauthy-common = { path = "../rauthy-common" }
 rauthy-models = { path = "../rauthy-models" }
 rauthy-service = { path = "../rauthy-service" }
 redhac = "0.5"
 #redhac = { path = "../../git/projects/redhac" }
+rust-embed = { version = "6.8", features = ["actix-web", "tokio"] }
 time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
 tracing = { version = "0.1", features = ["attributes"] }
 tokio = { version = "1", features = ["full"] }
