--- a/rauthy-common/Cargo.toml
+++ b/rauthy-common/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rauthy-common"
-version = "0.12.1"
+version = "0.13.0"
 edition = "2021"
 authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
 license = "AGPLv3"
@@ -19,8 +19,8 @@ lazy_static = "1"
 once_cell = "1"
 rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
-redhac = "0.5"
-#redhac = { path = "../../git/projects/redhac" }
+#redhac = "0.5"
+redhac = { git = "https://github.com/sebadob/redhac" }
 regex = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
