--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rauthy-models"
-version = "0.12.1"
+version = "0.13.0"
 edition = "2021"
 authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
 license = "AGPLv3"
@@ -33,8 +33,8 @@ openssl-sys = { version = "0.9", features = ["vendored"] }
 rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
 rauthy-common = { path = "../rauthy-common" }
-redhac = "0.5"
-#redhac = { path = "../../git/projects/redhac" }
+#redhac = "0.5"
+redhac = { git = "https://github.com/sebadob/redhac" }
 regex = "1"
 ring = "0.16"
 serde = { version = "1", features = ["derive"] }
