--- a/rauthy-service/Cargo.toml
+++ b/rauthy-service/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rauthy-service"
-version = "0.12.1"
+version = "0.13.0"
 edition = "2021"
 authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
 license = "AGPLv3"
@@ -21,8 +21,8 @@ rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
 rauthy-common = { path = "../rauthy-common" }
 rauthy-models = { path = "../rauthy-models" }
-redhac = "0.5"
-#redhac = { path = "../../git/projects/redhac" }
+#redhac = "0.5"
+redhac = { git = "https://github.com/sebadob/redhac" }
 ring = "0.16"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
