--- a/rauthy-main/Cargo.toml
+++ b/rauthy-main/Cargo.toml
@@ -19,8 +19,7 @@ rauthy-common = { path = "../rauthy-common" }
 rauthy-handlers = { path = "../rauthy-handlers" }
 rauthy-models = { path = "../rauthy-models" }
 rauthy-service = { path = "../rauthy-service" }
-#redhac = "0.5"
-redhac = { git = "https://github.com/sebadob/redhac" }
+redhac = "0.6"
 # actix web currently depends on 0.20
 rustls = "0.20"
 rustls-pemfile = "1"
