--- a/rauthy-common/Cargo.toml
+++ b/rauthy-common/Cargo.toml
@@ -19,8 +19,7 @@ lazy_static = "1"
 once_cell = "1"
 rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
-#redhac = "0.5"
-redhac = { git = "https://github.com/sebadob/redhac" }
+redhac = "0.6"
 regex = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
