--- a/rauthy-handlers/Cargo.toml
+++ b/rauthy-handlers/Cargo.toml
@@ -19,8 +19,7 @@ num_cpus = "1"
 rauthy-common = { path = "../rauthy-common" }
 rauthy-models = { path = "../rauthy-models" }
 rauthy-service = { path = "../rauthy-service" }
-#redhac = "0.5"
-redhac = { git = "https://github.com/sebadob/redhac" }
+redhac = "0.6"
 rust-embed = { version = "6.8", features = ["actix-web", "tokio"] }
 time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
 tracing = { version = "0.1", features = ["attributes"] }
