--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -33,8 +33,7 @@ openssl-sys = { version = "0.9", features = ["vendored"] }
 rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
 rauthy-common = { path = "../rauthy-common" }
-#redhac = "0.5"
-redhac = { git = "https://github.com/sebadob/redhac" }
+redhac = "0.6"
 regex = "1"
 ring = "0.16"
 serde = { version = "1", features = ["derive"] }
