--- a/rauthy-service/Cargo.toml
+++ b/rauthy-service/Cargo.toml
@@ -21,8 +21,7 @@ rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
 rauthy-common = { path = "../rauthy-common" }
 rauthy-models = { path = "../rauthy-models" }
-#redhac = "0.5"
-redhac = { git = "https://github.com/sebadob/redhac" }
+redhac = "0.6"
 ring = "0.16"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
