--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
 license = "AGPLv3"
 
 [dependencies]
+accept-language = "3"
 actix = "0.13"
 actix-multipart = "0.6"
 actix-web = { version = "4", features = ["rustls"] }
