--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,10 @@ edition = "2021"
 authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
 license = "AGPLv3"
 
+# TODO switch to global workspace version
+#[workspace.package]
+#version = "0.13.2"
+
 [profile.release]
 codegen-units = 1
 lto = true
