tests are green again

--- a/rauthy.test.cfg
+++ b/rauthy.test.cfg
@@ -1,5 +1,5 @@
 #DATABASE_URL=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
-DATABASE_URL="sqlite::memory:"
+#DATABASE_URL="sqlite::memory:"
 #DATABASE_URL=sqlite:data/rauthy.db
 
 # if 'true', the data store will be initialized with DEV values (default: false)
