--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -97,7 +97,7 @@ CACHE_RECONNECT_TIMEOUT_UPPER=5000
 # schema: rauthy with owner rauthy
 #
 #DATABASE_URL=sqlite::memory:
-DATABASE_URL=sqlite:data/rauthy.db
+#DATABASE_URL=sqlite:data/rauthy.db
 #DATABASE_URL=postgresql://postgres:123SuperSafe@localhost:5432/rauthy
 
 # Max DB connections - irrelevant for SQLite (default: 5)
@@ -107,6 +107,7 @@ DATABASE_URL=sqlite:data/rauthy.db
 # given database with this variable. Can be used to migrate between different databases.
 # !!! USE WITH CARE !!!
 #MIGRATE_DB_FROM=sqlite:data/rauthy.db
+#MIGRATE_DB_FROM=postgresql://postgres:123SuperSafe@localhost:5432/rauthy
 
 # Disables the housekeeping schedulers (default: false)
 #SCHED_DISABLE=true
@@ -317,8 +318,8 @@ RP_ID=localhost
 
 # Url containing the effective domain name (default: http://localhost:8080)
 # CAUTION: Must include the port number!
-#RP_ORIGIN=http://localhost:8080
-RP_ORIGIN=http://localhost:5173
+RP_ORIGIN=http://localhost:8080
+#RP_ORIGIN=http://localhost:5173
 
 # Non critical RP Name
 # Has no security properties and may be changed without issues (default: Rauthy Webauthn)
