--- a/Dockerfile.debug
+++ b/Dockerfile.debug
@@ -1,12 +1,14 @@
-FROM alpine:3.18.2
+FROM alpine:3.18.3
 #FROM gcr.io/distroless/cc:debug
 #FROM gcr.io/distroless/cc
+
+ARG BINARY
 
 USER 10001:10001
 
 WORKDIR /app
 
-COPY --chown=10001:10001 /out/rauthy .
+COPY --chown=10001:10001 /out/"$BINARY" ./rauthy
 RUN mkdir data
 
 COPY --chown=10001:10001 tls/ ./tls/
