--- a/Dockerfile.postgres
+++ b/Dockerfile.postgres
@@ -1,4 +1,4 @@
-FROM alpine:3.18.2 AS builderBackend
+FROM alpine:3.18.3 AS builderBackend
 
 WORKDIR /work
 
@@ -8,13 +8,11 @@ RUN mkdir data
 
 FROM alpine:3.18.3
 
-ARG BINARY
-
 USER 10001:10001
 
 WORKDIR /app
 
-COPY --chown=10001:10001 /out/"$BINARY" ./rauthy
+COPY --chown=10001:10001 /out/rauthy ./rauthy
 COPY --chown=10001:10001 --from=builderBackend /work/data ./data
 
 COPY --chown=10001:10001 tls/ ./tls/
