--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -56,6 +56,7 @@ tracing = { version = "0.1", features = ["attributes"] }
 tokio = { version = "1", features = ["full"] }
 utoipa = { version = "3", features = ["actix_extras", "chrono", "openapi_extensions"] }
 utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
+uuid = { version = "1", features = ["serde", "v4"] }
 validator = { version = "0.16", features = ["derive"] }
 # danger-allow-state-serialisation is needed to save the state into the DB for HA setup's
 # danger-credential-internals is needed for the feature to optionally force user verification
