code + comments cleanup

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -120,7 +120,7 @@ SCHED_USER_EXP_MINS=1
 # The threshold in minutes after which time the user expiry scheduler should automatically clean up expired users.
 # If not set at all, expired users will never be cleaned up automatically.
 # default: disabled / not set
-SCHED_USER_EXP_DELETE_MINS=2
+#SCHED_USER_EXP_DELETE_MINS=7200
 
 #####################################
 ############# E-MAIL ################
