add WEBAUTHN_NO_PASSWORD_EXPIRY config variable

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -115,7 +115,7 @@ CACHE_RECONNECT_TIMEOUT_UPPER=5000
 # The interval in minutes in which the scheduler for expired users should run.
 # If this finds expired users, it invalidates all existing sessions and refresh tokens for this user.
 # default: 60
-SCHED_USER_EXP_MINS=1
+#SCHED_USER_EXP_MINS=5
 
 # The threshold in minutes after which time the user expiry scheduler should automatically clean up expired users.
 # If not set at all, expired users will never be cleaned up automatically.
@@ -360,3 +360,9 @@ WEBAUTHN_RENEW_EXP=2160
 # Be careful with this option, since Android and some special combinations of OS + browser to not support UV yet.
 # (default: false)
 #WEBAUTHN_FORCE_UV=true
+
+# Can be set to 'true' to disable password expiry for users that have at least one active passkey.
+# When set to 'false', the same password expiry from the set policy will apply to these users as well.
+# With this option active, rauthy will ignore any password expiry set by the password policy for Webauthn users.
+# default: true
+WEBAUTHN_NO_PASSWORD_EXPIRY=true
