--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -244,6 +244,24 @@ LOG_LEVEL=debug
 LOG_LEVEL_ACCESS=Basic
 
 #####################################
+############## METRICS ##############
+#####################################
+
+# To enable or disable the additional HTTP server to expose the /metrics endpoint
+# default: true
+#METRICS_ENABLE=true
+
+# The IP address to listen on for the /metrics endpoint.
+# You do not want to expose your metrics on a publicly reachable endpoint!
+# default: 0.0.0.0
+#METRICS_ADDR=0.0.0.0
+
+# The post to listen on for the /metrics endpoint.
+# You do not want to expose your metrics on a publicly reachable endpoint!
+# default: 9090
+#METRICS_PORT=9090
+
+#####################################
 ################ MFA ################
 #####################################
 
