add METRICS section to the book

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -31,7 +31,7 @@ OPEN_USER_REG=true
 # each session in the Admin UI. If these are correct, your setup is okay.
 #
 # (default: true)
-SESSION_VALIDATE_IP=true
+#SESSION_VALIDATE_IP=true
 
 #####################################
 ############# BACKUPS ###############
