--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -61,6 +61,7 @@ validator = { version = "0.16", features = ["derive"] }
 # danger-allow-state-serialisation is needed to save the state into the DB for HA setup's
 # danger-credential-internals is needed for the feature to optionally force user verification
 webauthn-rs = { version = "0.4", features = ["danger-allow-state-serialisation", "danger-credential-internals"] }
+webauthn-rs-proto = "0.4.9"
 
 [dev-dependencies]
 pretty_assertions = "1"
