--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -144,6 +144,11 @@ CACHE_RECONNECT_TIMEOUT_UPPER=5000
 ############# E-MAIL ################
 #####################################
 
+# Will be used as the prefix for the E-Mail subject for each E-Mail that will be sent out to a client.
+# This can be used to further customize your deployment.
+# default: "Rauthy"
+E_MAIL_SUB_PREFIX="Rauthy"
+
 #SMTP_USERNAME=
 #SMTP_PASSWORD=
 #SMTP_URL=
