get rid of username in email subject in favor of the new prefix

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -147,7 +147,7 @@ CACHE_RECONNECT_TIMEOUT_UPPER=5000
 # Will be used as the prefix for the E-Mail subject for each E-Mail that will be sent out to a client.
 # This can be used to further customize your deployment.
 # default: "Rauthy"
-E_MAIL_SUB_PREFIX="Rauthy"
+EMAIL_SUB_PREFIX="Rauthy"
 
 #SMTP_USERNAME=
 #SMTP_PASSWORD=
