--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -48,6 +48,7 @@ rauthy-common = { path = "../rauthy-common" }
 redhac = "0.7"
 regex = "1"
 ring = "0.16"
+semver = { version = "1.0.19", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sqlx = { workspace = true }
