--- a/rauthy-main/Cargo.toml
+++ b/rauthy-main/Cargo.toml
@@ -27,7 +27,7 @@ rauthy-common = { path = "../rauthy-common" }
 rauthy-handlers = { path = "../rauthy-handlers" }
 rauthy-models = { path = "../rauthy-models" }
 rauthy-service = { path = "../rauthy-service" }
-redhac = "0.7"
+redhac = { workspace = true }
 rustls = "0.21"
 rustls-pemfile = "1"
 serde_json = "1"
