--- a/rauthy-common/Cargo.toml
+++ b/rauthy-common/Cargo.toml
@@ -19,7 +19,7 @@ lazy_static = "1"
 once_cell = "1"
 rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
-redhac = "0.7"
+redhac = { workspace = true }
 regex = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
