--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -45,7 +45,7 @@ openssl-sys = { version = "0.9", features = ["vendored"] }
 rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
 rauthy-common = { path = "../rauthy-common" }
-redhac = "0.7"
+redhac = { workspace = true }
 regex = "1"
 ring = "0.16"
 semver = { version = "1.0.19", features = ["serde"] }
