--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -396,7 +396,7 @@ WEBAUTHN_DATA_EXP=90
 
 # With webauthn enabled for a user, he needs to enter username / password on a new system. If these credentials are
 # verified, rauthy will set an additional cookie, which will determine how long the user can then use only (safe)
-# MFA passwordless webauthn login with yubikeys, apple touch id, windows hello, ... until he needs to verify his
+# MFA passwordless webauthn login with Yubikeys, apple touch id, windows hello, ... until he needs to verify his
 # credentials again.
 # Passwordless login is generally much safer than logging in with a password. But sometimes it is possible, that the
 # Webauthn devices do not force the user to include a second factor, which in that case would be a single factor login
