--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,45 @@ lto = true
 panic = "abort"
 
 [workspace.dependencies]
-sqlx = { version = "0.7", features = ["macros", "migrate", "postgres", "runtime-tokio", "sqlite", "tls-rustls", "uuid"] }
+actix = "0.13"
+actix-multipart = "0.6"
+actix-service = "2"
+actix-web = { version = "4.4", features = ["rustls-0_21"] }
+actix-web-actors = "4"
+actix-web-lab = "0.19"
+actix-web-grants = "3"
+argon2 = { version = "0.5", features = ["std", "zeroize"] }
+askama = { version = "0.12", features = ["with-actix-web"] }
+askama_actix = "0.14"
+bincode = "1"
+chacha20poly1305 = { version = "0.10", features = ["std"] }
+chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
+css-color = "0.2"
+derive_more = "0.99"
+dotenvy = "0.15"
+flume = "0.11"
+jwt-simple = "0.11"
+lazy_static = "1"
+num_cpus = "1"
+## Add openssl-sys as a direct dependency so it can be cross compiled to
+## x86_64-unknown-linux-musl using the "vendored" feature below
+openssl-sys = { version = "0.9", features = ["vendored"] }
+rand = "0.8"
+rand_core = { version = "0.6", features = ["std"] }
 redhac = "0.8.0"
+regex = "1"
+ring = "0.17"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+sqlx = { version = "0.7", features = ["macros", "migrate", "postgres", "runtime-tokio", "sqlite", "tls-rustls", "uuid"] }
+time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
+tracing = { version = "0.1", features = ["attributes"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing"] }
+tokio = { version = "1", features = ["full"] }
+utoipa = { version = "4", features = ["actix_extras", "chrono", "openapi_extensions"] }
+utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
+validator = { version = "0.16", features = ["derive"] }
+webauthn-rs = { version = "0.4", features = [
+    "danger-allow-state-serialisation", "danger-credential-internals", "resident-key-support"
+] }
+webauthn-rs-proto = "0.4.9"
