--- a/rauthy-common/Cargo.toml
+++ b/rauthy-common/Cargo.toml
@@ -6,29 +6,29 @@ authors.workspace = true
 license.workspace = true
 
 [dependencies]
-actix-web = { version = "4", features = ["rustls"] }
-argon2 = { version = "0.5", features = ["std", "zeroize"] }
+actix-multipart = { workspace = true }
+actix-web = { workspace = true }
+argon2 = { workspace = true }
 base64 = "0.21"
-bincode = "1"
-chacha20poly1305 = { version = "0.10", features = ["std"] }
-chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
-css-color = "0.2"
-derive_more = "0.99"
-flume = "0.10"
-lazy_static = "1"
+bincode = { workspace = true }
+chacha20poly1305 = { workspace = true }
+chrono = { workspace = true }
+css-color = { workspace = true }
+derive_more = { workspace = true }
+flume = { workspace = true }
+lazy_static = { workspace = true }
 once_cell = "1"
-rand = "0.8"
-rand_core = { version = "0.6", features = ["std"] }
+rand = { workspace = true }
+rand_core = { workspace = true }
 redhac = { workspace = true }
-regex = "1"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1"
+regex = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
 sqlx = { workspace = true }
-time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
-tracing = { version = "0.1", features = ["attributes"] }
-tokio = { version = "1", features = ["full"] }
-utoipa = { version = "3", features = ["actix_extras", "chrono", "openapi_extensions"] }
-actix-multipart = "0.6.0"
+time = { workspace = true }
+tracing = { workspace = true }
+tokio = { workspace = true }
+utoipa = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = "1"
