--- a/rauthy-service/Cargo.toml
+++ b/rauthy-service/Cargo.toml
@@ -6,34 +6,34 @@ authors.workspace = true
 license.workspace = true
 
 [dependencies]
-actix-web = { version = "4", features = ["rustls"] }
-argon2 = { version = "0.5", features = ["std", "zeroize"] }
-askama = { version = "0.12", features = ["with-actix-web"] }
-askama_actix = "0.14"
-chacha20poly1305 = { version = "0.10", features = ["std"] }
-chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
-derive_more = "0.99"
-jwt-simple = "0.11"
+actix-web = { workspace = true }
+argon2 = { workspace = true }
+askama = { workspace = true }
+askama_actix = { workspace = true }
+chacha20poly1305 = { workspace = true }
+chrono = { workspace = true }
+derive_more = { workspace = true }
+jwt-simple = { workspace = true }
 ## Add openssl-sys as a direct dependency so it can be cross compiled to
 ## x86_64-unknown-linux-musl using the "vendored" feature below
-openssl-sys = { version = "0.9", features = ["vendored"] }
-rand = "0.8"
-rand_core = { version = "0.6", features = ["std"] }
+openssl-sys = { workspace = true }
+rand = { workspace = true }
+rand_core = { workspace = true }
 rauthy-common = { path = "../rauthy-common" }
 rauthy-models = { path = "../rauthy-models" }
 redhac = { workspace = true }
-ring = "0.16"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+ring = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
 sqlx = { workspace = true }
-time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
-tracing = { version = "0.1", features = ["attributes"] }
-tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time", "tracing"] }
-tokio = { version = "1", features = ["full"] }
-utoipa = { version = "3", features = ["actix_extras", "chrono", "openapi_extensions"] }
-utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
-validator = { version = "0.16", features = ["derive"] }
-webauthn-rs = { version = "0.4", features = ["danger-allow-state-serialisation", "danger-credential-internals", "resident-key-support"] }
+time = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+tokio = { workspace = true }
+utoipa = { workspace = true }
+utoipa-swagger-ui = { workspace = true }
+validator = { workspace = true }
+webauthn-rs = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = "1"
