adjust email prefix default

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -146,8 +146,8 @@ CACHE_RECONNECT_TIMEOUT_UPPER=5000
 
 # Will be used as the prefix for the E-Mail subject for each E-Mail that will be sent out to a client.
 # This can be used to further customize your deployment.
-# default: "Rauthy"
-EMAIL_SUB_PREFIX="Rauthy"
+# default: "Rauthy IAM"
+EMAIL_SUB_PREFIX="Rauthy IAM"
 
 #SMTP_USERNAME=
 #SMTP_PASSWORD=
