--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 members = [
     "rauthy-common",
+    "rauthy-events",
     "rauthy-handlers",
     "rauthy-main",
     "rauthy-models",
