--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -30,6 +30,7 @@ chrono = { workspace = true }
 css-color = { workspace = true }
 derive_more = { workspace = true }
 dotenvy = { workspace = true }
+flume = { workspace = true }
 futures-util = "0.3"
 hex = { version = "0.4", features = ["serde"] }
 jwt-simple = { workspace = true }
@@ -41,6 +42,7 @@ openssl-sys = { workspace = true }
 rand = { workspace = true }
 rand_core = { workspace = true }
 rauthy-common = { path = "../rauthy-common" }
+rauthy-events = { path = "../rauthy-events" }
 redhac = { workspace = true }
 regex = { workspace = true }
 ring = { workspace = true }
