introduce 'SSE_KEEP_ALIVE' config var

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -327,6 +327,11 @@ PROXY_MODE=false
 # (default: false)
 #SWAGGER_UI_EXTERNAL=false
 
+# The interval in seconds in which keep-alives should be sent to SSE clients.
+# Depending on your network setup, proxy timeouts, ..., you may adjust this value to fit your needs.
+# default: 30
+#SSE_KEEP_ALIVE=30
+
 #####################################
 ############### TLS #################
 #####################################
