`EVENT_EMAIL` + `EVENT_NOTIFY_LEVEL` config vars

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -184,6 +184,23 @@ MAX_HASH_THREADS=1
 HASH_AWAIT_WARN_TIME=500
 
 #####################################
+######### EVENTS / AUDIT ############
+#####################################
+
+# The E-Mail address event notifications should be sent to
+#EVENT_EMAIL=admin@localhost.de
+
+# The notification level for events. Works the same way as a logging level. For instance:
+# 'notice' means send out a notifications for all events with the info level or higher.
+# Possible values:
+# - info
+# - notice
+# - warning
+# - critical
+# default: 'notice'
+EVENT_NOTIFY_LEVEL=notice
+
+#####################################
 ####### LIFETIMES / TIMEOUTS ########
 #####################################
 
