`EVENT_EMAIL` + `EVENT_NOTIFY_LEVEL` added to default deploy config

--- a/rauthy.deploy.cfg
+++ b/rauthy.deploy.cfg
@@ -28,6 +28,23 @@ OPEN_USER_REG=true
 DATABASE_URL=sqlite::memory:
 
 #####################################
+######### EVENTS / AUDIT ############
+#####################################
+
+# The E-Mail address event notifications should be sent to
+#EVENT_EMAIL=admin@localhost.de
+
+# The notification level for events. Works the same way as a logging level. For instance:
+# 'notice' means send out a notifications for all events with the info level or higher.
+# Possible values:
+# - info
+# - notice
+# - warning
+# - critical
+# default: 'notice'
+#EVENT_NOTIFY_LEVEL=notice
+
+#####################################
 ############# E-MAIL ################
 #####################################
 
