`EVENT_PERSIST_LEVEL` + `EVENT_CLEANUP_DAYS` config vars

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -200,6 +200,19 @@ HASH_AWAIT_WARN_TIME=500
 # default: 'notice'
 EVENT_NOTIFY_LEVEL=notice
 
+# Define the level from which on events should be persisted inside the database.
+# Possible values:
+# - info
+# - notice
+# - warning
+# - critical
+# default: 'notice'
+EVENT_PERSIST_LEVEL=notice
+
+# Define the number of days when events should be cleaned up from the database.
+# default: 31
+EVENT_CLEANUP_DAYS=31
+
 #####################################
 ####### LIFETIMES / TIMEOUTS ########
 #####################################
