--- a/rauthy-handlers/Cargo.toml
+++ b/rauthy-handlers/Cargo.toml
@@ -13,6 +13,7 @@ actix-web-actors = { workspace = true }
 actix-web-lab = { workspace = true }
 actix-web-validator = "5"
 actix-web-grants = { workspace = true }
+chrono = { workspace = true }
 futures = "0.3"
 lazy_static = { workspace = true }
 mime_guess = "2"
