--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ css-color = "0.2"
 derive_more = "0.99"
 dotenvy = "0.15"
 flume = "0.11"
+gethostname = "0.4"
 jwt-simple = "0.11"
 lazy_static = "1"
 num_cpus = "1"
