--- a/rauthy-common/Cargo.toml
+++ b/rauthy-common/Cargo.toml
@@ -16,6 +16,7 @@ chrono = { workspace = true }
 css-color = { workspace = true }
 derive_more = { workspace = true }
 flume = { workspace = true }
+gethostname = { workspace = true }
 lazy_static = { workspace = true }
 once_cell = "1"
 rand = { workspace = true }
