new config vars for app version scheduler

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -236,6 +236,9 @@ EVENT_LEVEL_USER_EMAIL_CHANGE=notice
 # The level for the generated Event after a user has been given the 'rauthy_admin' role
 # default: notice
 EVENT_LEVEL_RAUTHY_ADMIN=notice
+# The level for the generated Event after a new App version has been found
+# default: notice
+EVENT_LEVEL_RAUTHY_VERSION=notice
 # The level for the generated Event after the JWKS has been rotated
 # default: notice
 EVENT_LEVEL_JWKS_ROTATE=notice
@@ -267,6 +270,13 @@ EVENT_LEVEL_FAILED_LOGINS_10=warning
 EVENT_LEVEL_FAILED_LOGINS_7=notice
 # default: info
 EVENT_LEVEL_FAILED_LOGIN=info
+
+# If set to 'true', it will disable the app version checker.
+# This is a scheduled task that looks up the latest version periodically
+# by doing a request to the Github API to check the latest release.
+# This ignores any type of prerelease and will only notify for a new stable.
+# default: false
+#DISABLE_APP_VERSION_CHECK=false
 
 #####################################
 ####### LIFETIMES / TIMEOUTS ########
