--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ rand_core = { version = "0.6", features = ["std"] }
 redhac = "0.8.0"
 regex = "1"
 ring = "0.17"
+semver = { version = "1.0.19", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sqlx = { version = "0.7", features = ["macros", "migrate", "postgres", "runtime-tokio", "sqlite", "tls-rustls", "uuid"] }
