--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "rauthy-handlers",
     "rauthy-main",
     "rauthy-models",
+    "rauthy-notify",
     "rauthy-service",
 ]
 
@@ -32,6 +33,7 @@ actix-web-lab = "0.19"
 argon2 = { version = "0.5", features = ["std", "zeroize"] }
 askama = { version = "0.12", features = ["with-actix-web"] }
 askama_actix = "0.14"
+async-trait = "0.1.74"
 bincode = "1"
 chacha20poly1305 = { version = "0.10", features = ["std"] }
 chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
@@ -50,6 +52,7 @@ rand = "0.8"
 rand_core = { version = "0.6", features = ["std"] }
 redhac = "0.8.0"
 regex = "1"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 ring = "0.17"
 semver = { version = "1.0.19", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
