--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -200,8 +200,21 @@ JWK_AUTOROTATE_CRON="0 30 3 1 * * *"
 ######### EVENTS / AUDIT ############
 #####################################
 
-# The E-Mail address event notifications should be sent to
+# The E-Mail address event notifications should be sent to.
+# If left empty, no messages will be sent to Slack.
 #EVENT_EMAIL=admin@localhost.de
+
+# TODO MATRIX
+# If left empty, no messages will be sent to Slack.
+#EVENT_MATRIX_SERVER=
+#EVENT_MATRIX_SERVER=
+#EVENT_MATRIX_SERVER=
+
+# The Webhook for Slack Notifications.
+# If left empty, no messages will be sent to Slack.
+#EVENT_SLACK_WEBHOOK=
+
+# TODO Matrix
 
 # The notification level for events. Works the same way as a logging level. For instance:
 # 'notice' means send out a notifications for all events with the info level or higher.
@@ -210,8 +223,13 @@ JWK_AUTOROTATE_CRON="0 30 3 1 * * *"
 # - notice
 # - warning
 # - critical
+#
+# default: 'warning'
+EVENT_NOTIFY_LEVEL_EMAIL=info
 # default: 'notice'
-EVENT_NOTIFY_LEVEL=notice
+#EVENT_NOTIFY_LEVEL_MATRIX=notice # TODO
+# default: 'notice'
+EVENT_NOTIFY_LEVEL_SLACK=info
 
 # Define the level from which on events should be persisted inside the database.
 # All events with a lower level will be lost, if there is no active event subscriber.
