handle a not set SMTP_URL nicely for "just testing out" use cases

--- a/rauthy.deploy.cfg
+++ b/rauthy.deploy.cfg
@@ -50,7 +50,7 @@ DATABASE_URL=sqlite::memory:
 
 SMTP_USERNAME=
 SMTP_PASSWORD=
-SMTP_URL=smtp.gmail.com
+SMTP_URL=smtp.change.me
 # Format: "Rauthy <rauthy@localhost.de>"
 SMTP_FROM="Rauthy <rauthy@localhost.de>"
 
