last fixes + docs version tag updates

--- a/rauthy.deploy.cfg
+++ b/rauthy.deploy.cfg
@@ -48,9 +48,9 @@ DATABASE_URL=sqlite::memory:
 ############# E-MAIL ################
 #####################################
 
-SMTP_USERNAME=
-SMTP_PASSWORD=
-SMTP_URL=smtp.change.me
+#SMTP_USERNAME=
+#SMTP_PASSWORD=
+#SMTP_URL=smtp.change.me
 # Format: "Rauthy <rauthy@localhost.de>"
 SMTP_FROM="Rauthy <rauthy@localhost.de>"
 
