helm chart creation: base + sts added

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -159,7 +159,7 @@ EMAIL_SUB_PREFIX="Rauthy IAM"
 ###### ENCRYPTION / HASHING #########
 #####################################
 
-# Format: "key_id/enc_key another_key_id/another_enc_key" - the enc_key itself must be exactly 32 characters long and
+# Format: "key_id/enc_key another_key_id/another_enc_key" - the enc_key itself must be exactly 32 characters long
 # and should not contain special characters.
 # The ID must match '[a-zA-Z0-9]{2,20}'
 ENC_KEYS="bVCyTsGaggVy5yqQ/S9n7oCen53xSJLzcsmfdnBDvNrqQ63r4 q6u26onRvXVG4427/3CEC8RJWBcMkrBMkRXgx65AmJsNTghSA"
